# AOC2022

./: CMakeLists.txt  README.md
Day1/: aoc1.c
Day10/: aoc10.c
Day2/: aoc2.c
Day3/: aoc3.c
Day4/: aoc4.c
Day5/: aoc5.c
Day6/: aoc6.c
Day7/: aoc7.c
Day8/: aoc8.c
Day9/: aoc9.c
