cmake_minimum_required(VERSION 3.23)
project(AOC2022 C)

set(CMAKE_C_STANDARD 99)

add_executable(day1 Day1/aoc1.c)

add_executable(day2 Day2/aoc2.c)

add_executable(day3 Day3/aoc3.c)

add_executable(day4 Day4/aoc4.c)

add_executable(day5 Day5/aoc5.c)

add_executable(day6 Day6/aoc6.c)

add_executable(day7 Day7/aoc7.c)